src/test/deca/context/invalid/Obj/extends-int.deca
// Description:
//    Déclaration d'une classe qui hérite des entiers
//
// Résultat:
//La superclasse donnée n'est pas une classe
//
class A extends int{}
{}